...
      <Tab.Screen
        name="Matches"
        component={MatchesStackNavigator}
        options={{
          headerShown: false,
          tabBarButton: (props) => (
            <Pressable {...(props as unknown as PressableProps)} testID="tab-matches" />
          ),
          tabBarIcon: ({ color, size }) => (
            <MaterialCommunityIcons name="scoreboard-outline" size={size} color={color} />
          ),
        }}
        listeners={({ navigation }) => ({
...
