import palette from './palette';

export const TEAM_COLOUR_OPTIONS: { hex: string; label: string }[] = [
  { hex: palette.red[500], label: 'Red' },
  { hex: palette.pink[500], label: 'Pink' },
  { hex: palette.purple[500], label: 'Purple' },
  { hex: palette.blue[500], label: 'Blue' },
  { hex: palette.teal[500], label: 'Teal' },
  { hex: palette.green[500], label: 'Green' },
  { hex: palette.orange[500], label: 'Orange' },
  { hex: palette.brown[500], label: 'Brown' },
  { hex: palette.neutral[500], label: 'Grey' },
  { hex: palette.gray[950], label: 'Black' },
];
